[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/images/white_box_10x10.png" type="Texture" id=1]
[ext_resource path="res://classes/enemies/FlyNCollide/scripts/fly_n_collide.gd" type="Script" id=2]
[ext_resource path="res://classes/state_machine/scripts/state_machine.gd" type="Script" id=3]
[ext_resource path="res://classes/enemies/FlyNCollide/scripts/fly_state.gd" type="Script" id=4]
[ext_resource path="res://classes/enemies/FlyNCollide/scripts/idle_state.gd" type="Script" id=5]
[ext_resource path="res://classes/enemies/FlyNCollide/scripts/charge_state.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=2]
radius = 131.004

[sub_resource type="CircleShape2D" id=3]
radius = 3.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 1 )

[node name="FlyNCollide" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": "This type of enemy is flying and colliding to the player."
}
id = "FlyNCollide"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 0.5, 0.5 )
process_mode = 0

[node name="Visibility" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visibility"]
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.858824, 0.12549, 0.12549, 1 )
position = Vector2( 2.08616e-07, 0 )
scale = Vector2( 0.8, 0.2 )
texture = ExtResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
initial_state = NodePath("Fly")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Fly" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Charge" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[connection signal="body_entered" from="Visibility" to="." method="_on_Visibility_body_entered"]
[connection signal="body_exited" from="Visibility" to="." method="_on_Visibility_body_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
